[package]
name = "level-editor"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
eframe = "0.22.0"
csv = "1.3"
image = "0.24"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]

